--- a/web/index.html
+++ b/web/index.html
@@ -137,7 +137,7 @@
                                 <p class="flow-text" id="card-text1">A web chat that relies on speed, security and simplicity.<br>Just chat, that's it.</p>
                             </div>
                             <div class="card-action mdl-card__actions" id="card-border">
-                                <form action="" method="post" name="chatroom" id="chatroom">
+                                <form action="" method="post" name="chatroom" id="chatroom" onsubmit="validate();">
                                     <span id="spc"></span>
                                     <div id="card-form">
                                         <i class="material-icons" id="icon">forum</i>
